crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__generic_function.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(r#\"\n            fn identity[T](value: T) -> T {\n                return value\n            }\n\n            fn main() {\n                let a: I64 = identity(10)\n            }\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 164904531810230,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 164904531810230,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 193336347639580,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Application {
                                                    id: SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 213238618720125,
                                                    },
                                                    type: Path {
                                                        base_id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 218924981885995,
                                                        },
                                                        base: Resolved(
                                                            I64,
                                                        ),
                                                        segments: [],
                                                    },
                                                    generic_arguments: [],
                                                },
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 233140889800670,
                                                },
                                                type: Computed(
                                                    I64,
                                                ),
                                                kind: Call(
                                                    Call {
                                                        function: AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 241670434549475,
                                                            },
                                                            type: Computed(
                                                                FunctionItem(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: Some(
                                                                                FileId(
                                                                                    1,
                                                                                ),
                                                                            ),
                                                                            number: 25588634246415,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Variable(
                                                                Global(
                                                                    AirStaticValueId(
                                                                        SyntaxId {
                                                                            file_id: Some(
                                                                                FileId(
                                                                                    1,
                                                                                ),
                                                                            ),
                                                                            number: 25588634246415,
                                                                        },
                                                                    ),
                                                                ),
                                                            ),
                                                        },
                                                        arguments: [
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 258729524047085,
                                                                },
                                                                type: Computed(
                                                                    I64,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        10,
                                                                    ),
                                                                ),
                                                            },
                                                        ],
                                                        generic_arguments: Computed(
                                                            [
                                                                I64,
                                                            ],
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 187649984473710,
                                    },
                                ),
                            ),
                        },
                    },
                },
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 25588634246415,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 25588634246415,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "identity",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: Some(
                                                FileId(
                                                    1,
                                                ),
                                            ),
                                            number: 130786352815010,
                                        },
                                        type: Computed(
                                            Generic(
                                                TypeId {
                                                    id: SyntaxId {
                                                        file_id: None,
                                                        number: 1,
                                                    },
                                                    kind: "auryn_compiler::auryn::air::typecheck::types::GenericType",
                                                },
                                            ),
                                        ),
                                        kind: Variable(
                                            Local(
                                                AirLocalValueId(
                                                    0,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            1,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 108040900151530,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
