crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__intrinsics-2.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: []I64 = arrayOf(1, 2, 3)\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 32838747282908,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 32838747282908,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 75059993789504,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Array(
                                                    SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 126663739519788,
                                                    },
                                                    Application {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 126663739519788,
                                                        },
                                                        type: Path {
                                                            base_id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 136046238743476,
                                                            },
                                                            base: Resolved(
                                                                I64,
                                                            ),
                                                            segments: [],
                                                        },
                                                        generic_arguments: [],
                                                    },
                                                ),
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 159502486802696,
                                                },
                                                type: Computed(
                                                    Array(
                                                        TypeId {
                                                            id: SyntaxId {
                                                                file_id: None,
                                                                number: 1,
                                                            },
                                                            kind: "auryn_compiler::auryn::air::typecheck::types::ArrayType",
                                                        },
                                                    ),
                                                ),
                                                kind: Call(
                                                    Call {
                                                        function: AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 173576235638228,
                                                            },
                                                            type: Computed(
                                                                Intrinsic(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Variable(
                                                                Intrinsic(
                                                                    ArrayOf,
                                                                ),
                                                            ),
                                                        },
                                                        arguments: [
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 201723733309292,
                                                                },
                                                                type: Computed(
                                                                    I64,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        1,
                                                                    ),
                                                                ),
                                                            },
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 229871230980356,
                                                                },
                                                                type: Computed(
                                                                    I64,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        2,
                                                                    ),
                                                                ),
                                                            },
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 258018728651420,
                                                                },
                                                                type: Computed(
                                                                    I64,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        3,
                                                                    ),
                                                                ),
                                                            },
                                                        ],
                                                        generic_arguments: Computed(
                                                            [],
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 65677494565816,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
