crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__intrinsics-3.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: []I64 = arrayOfZeros(3)\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 41048434103635,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 41048434103635,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 93824992236880,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Array(
                                                    SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 158329674399735,
                                                    },
                                                    Application {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 158329674399735,
                                                        },
                                                        type: Path {
                                                            base_id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 170057798429345,
                                                            },
                                                            base: Resolved(
                                                                I64,
                                                            ),
                                                            segments: [],
                                                        },
                                                        generic_arguments: [],
                                                    },
                                                ),
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 199378108503370,
                                                },
                                                type: Computed(
                                                    Array(
                                                        TypeId {
                                                            id: SyntaxId {
                                                                file_id: None,
                                                                number: 1,
                                                            },
                                                            kind: "auryn_compiler::auryn::air::typecheck::types::ArrayType",
                                                        },
                                                    ),
                                                ),
                                                kind: Call(
                                                    Call {
                                                        function: AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 216970294547785,
                                                            },
                                                            type: Computed(
                                                                Intrinsic(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Variable(
                                                                Intrinsic(
                                                                    ArrayOfZeros,
                                                                ),
                                                            ),
                                                        },
                                                        arguments: [
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 252154666636615,
                                                                },
                                                                type: Computed(
                                                                    I32,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        3,
                                                                    ),
                                                                ),
                                                            },
                                                        ],
                                                        generic_arguments: Computed(
                                                            [],
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 82096868207270,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
